--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "postcss": "^8.5.3",
+    "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.7",
     "vite": "^6.1.0"
   }
